# ev_graph_compress_pylib

./: .gitignore  CMakeLists.txt  __init__.py  bicliq_compress_lib.cpp  build.sh  clique_compress_lib.cpp  compress_bindings.cpp  meta_graph_compress_lib.py  op_add_lvl_lib.cpp  op_compress_lib.cpp  py_api_connector.py  spack_env.yaml  temp_out.txt  test.ipynb  test.py
ev_graph_compress/: __init__.py
